--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: contact@ledoux-architecture.fr
 description: "Architecture, littérature, philosophie et société au tournant des Lumières. L’Architecture considérée sous le rapport de l’Art des mœurs et de la législation de Claude-Nicolas Ledoux, une édition numérique."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ledoux
+twitter_username: ledoux-architecture
 
 # Build settings
 theme: minima
