--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# menu
+header_pages:
+  - index.md
+  - recherche.md
+  - equipe.md
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
