--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ plugins:
 header_pages:
   - recherche.md
   - equipe.md
+
+# posts
+posts: Actualités du projet
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
